--- a/overlay/MarbleSystemUIOverlay/res/values/config.xml
+++ b/overlay/MarbleSystemUIOverlay/res/values/config.xml
@@ -41,4 +41,12 @@
     <!-- Preferred max refresh rate at keyguard, if supported by the display. -->
     <integer name="config_keyguardMaxRefreshRate">60</integer>
 
+    <!-- Maximum number of notification icons shown on the Always on Display
+        (excluding overflow dot) -->
+    <integer name="max_notif_icons_on_aod">4</integer>
+    <!-- Maximum number of notification icons shown on the lockscreen (excluding overflow dot) -->
+    <integer name="max_notif_icons_on_lockscreen">4</integer>
+    <!-- Maximum number of notification icons shown in the status bar (excluding overflow dot) -->
+    <integer name="max_notif_static_icons">5</integer>
+
 </resources>
