--- a/overlay/AOSPAMarbleFrameworksOverlay/res/values/config.xml
+++ b/overlay/AOSPAMarbleFrameworksOverlay/res/values/config.xml
@@ -43,7 +43,7 @@
     <integer name="config_doubleTapDefault">1</integer>
 
     <!-- Build fingerprint from stock ROM -->
-    <string name="config_stockFingerprint" translatable="false">POCO/marble_global/marble:13/TKQ1.221114.001/V14.0.7.0.TMRMIXM:user/release-keys</string>
+    <string name="config_stockFingerprint" translatable="false">POCO/marble_global/marble:14/UKQ1.230804.001/V816.0.2.0.UMRMIXM:user/release-keys</string>
 
     <!-- Device model (Build.MODEL) to spoof for netflix -->
     <string name="config_netflixSpoofModel" translatable="false">23049PCD8G</string>
