--- a/overlay/AOSPAMarbleSystemUIOverlay/res/values/config.xml
+++ b/overlay/AOSPAMarbleSystemUIOverlay/res/values/config.xml
@@ -16,8 +16,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- StatusBar burn-in protection -->
-    <dimen name="horizontal_max_shift">2.0dp</dimen>
-    <dimen name="vertical_max_shift">1.0dp</dimen>
+    <!-- Whether long press is required to activate keyguard quick affordance buttons -->
+    <bool name="config_keyguardQuickAffordanceRequiresLongPress">false</bool>
 
 </resources>
